Fix sidebar navigation on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @plugin '@tailwindcss/typography';
 
 @custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));
@@ -19,7 +19,7 @@
 
   @apply selection:bg-violet-600 selection:text-white;
 
-  &[data-theme='dark'] {
+  &[data-theme="dark"] {
     /* Dark theme variables go here */
     --clr-bg-primary: var(--color-slate-900);
     --clr-bg-secondary: var(--color-slate-800);
@@ -31,6 +31,8 @@
 
 * {
   box-sizing: border-box;
+  interpolate-size: allow-keywords;
+  transition-behavior: allow-discrete;
 }
 
 html {
@@ -59,7 +61,7 @@ body {
   @apply inline-block cursor-pointer rounded-md bg-slate-600 px-4 py-2 font-bold text-white;
 }
 
-.btn[data-btn-type='primary'] {
+.btn[data-btn-type="primary"] {
   @apply bg-(--clr-btn-primary);
 }
 
